cleanup, turn into record classes